--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -5,7 +5,8 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
+  schedule:
+    - cron: "0 3 * * *"   # runs every day at 03:00 UTC
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
