--- a/_data/events.yml
+++ b/_data/events.yml
@@ -43,3 +43,10 @@ main_events:
     location: Berlin-Brandenburgische Akademie der Wissenschaften, Jägerstraße 22/23
     organized_by: Ruth Sander
     registration_note: Anmeldung zur Teilnahme und für Impulsbeiträge erwünscht.
+  - title: Anti-Konferenz
+    date: 2026-10-02T16:00:00+01:00
+    start: 2026-10-02T16:00:00+01:00
+    end: 2026-10-02T18:00:00+01:00
+    location: Mehringhof
+    organized_by:
+    registration_note:
