--- a/_data/events.yml
+++ b/_data/events.yml
@@ -29,7 +29,7 @@ main_events:
     location: Berlin-Brandenburgische Akademie der Wissenschaften, Jägerstraße 22/23
     registration_note: Anmeldung zur Teilnahme und für Impulsbeiträge erwünscht.
     organized_by: Ruth Sander
-  - title: Fünftes Vernetzungstreffen (Thema noch offen)
+  - title: Fünftes Vernetzungstreffen (Thema: KI Tools)
     date: 2026-03-02T16:00:00+01:00
     start: 2026-03-02T16:00:00+01:00
     end: 2026-03-02T18:00:00+01:00
